bk_ida/gccida/c3/qty_compare
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/local-alloc.c:2176:25: error: use of undeclared identifier 'qty_0'
v3 = ( int)( ( double)( qty_0[q2].size * qty_0[q2].freq * floor_log2_wide( qty_0[q2].n_refs)) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/local-alloc.c:2176:42: error: use of undeclared identifier 'qty_0'
v3 = ( int)( ( double)( qty_0[q2].size * qty_0[q2].freq * floor_log2_wide( qty_0[q2].n_refs)) 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/local-alloc.c:2176:76: error: use of undeclared identifier 'qty_0'
v3 = ( int)( ( double)( qty_0[q2].size * qty_0[q2].freq * floor_log2_wide( qty_0[q2].n_refs)) 
                                                                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/local-alloc.c:2177:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q2].death - qty_0[q2].birth) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/local-alloc.c:2177:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q2].death - qty_0[q2].birth) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/local-alloc.c:2180:22: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[q1].size * qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs)) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/local-alloc.c:2180:39: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[q1].size * qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs)) 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/local-alloc.c:2180:73: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[q1].size * qty_0[q1].freq * floor_log2_wide( qty_0[q1].n_refs)) 
                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/local-alloc.c:2181:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q1].death - qty_0[q1].birth) 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/local-alloc.c:2181:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[q1].death - qty_0[q1].birth) 
                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/qty_compare/src/obj/local-alloc.o] Error 1
